# pybeam

./: README.md  __init__.py  beam.py  detector.py  display.py  element.py  propagate.py  pyproject.toml
examples/: example1.py  propagate_example1.py
src/: requirements.txt
src/pybeam/: __init__.py  beam.py  detector.py  display.py  element.py  propagate.py
src/pybeam/utils/: arraymaths.py  graphics.py
