[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybeam"
version = "0.0.1"
authors = [
  { name="Phil Birch", email="p.m.birch@sussex.ac.uk" },
]
description = "An optical simulator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]
dependencies =["loguru", "numpy", "matplotlib","scipy"]
[project.urls]
"Homepage" = "https://github.com/docPhil99/pybeam"
"Bug Tracker" = "https://github.com/docPhil99/pybeam/issues"
